# NASpI-calculator

./: .gitignore  README.md  com.github.medeotl.NASpI-Calculator.json  meson.build
data/: application.css  com.github.medeotl.NASpI-Calculator.appdata.xml.in  com.github.medeotl.NASpI-Calculator.data.gresource.xml  com.github.medeotl.NASpI-Calculator.desktop.in  com.github.medeotl.NASpI-Calculator.gschema.xml  meson.build  window.ui
po/: POTFILES  meson.build
src/: com.github.medeotl.NASpI-Calculator.data.gresource.xml  com.github.medeotl.NASpI-Calculator.src.gresource.xml  main.js  meson.build  util.js  window.js  window.ui
